before using iterator