@@ -1,9 +1,11 @@
 package com.freshbourne.hdfs.index;
 
 import java.io.File;
+import java.io.FileNotFoundException;
 import java.io.IOException;
+import java.io.RandomAccessFile;
 import java.util.ArrayList;
-import java.util.Iterator;
+import java.util.LinkedList;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
@@ -20,6 +22,8 @@ import org.apache.hadoop.mapreduce.RecordReader;
 import org.apache.hadoop.mapreduce.TaskAttemptContext;
 import org.apache.hadoop.mapreduce.lib.input.FileSplit;
 import org.apache.hadoop.util.LineReader;
+
+import com.freshbourne.hdfs.index.IndexedRecordReader.Shared;
 
 public class IndexedRecordReader extends
 		RecordReader<LongWritable, ArrayList<String>> {
@@ -39,9 +43,14 @@ public class IndexedRecordReader extends
 	private static Index<String, String> index;
 	private String[] splits;
 	private Configuration conf;
-	
-	public static void setDelimiter(String d){ delimiter = d; }
-	public static void setIndex(Index<String, String> i){
+
+	private Shared shared;
+
+	public static void setDelimiter(String d) {
+		delimiter = d;
+	}
+
+	public static void setIndex(Index<String, String> i) {
 		index = i;
 	}
 
@@ -49,11 +58,11 @@ public class IndexedRecordReader extends
 	@Override
 	public void initialize(InputSplit inputSplit, TaskAttemptContext context)
 			throws IOException, InterruptedException {
-		
+
 		// lets assume its a file split
-		
+
 		LOG.info("in RecordReader.initialize()");
-		
+
 		FileSplit split = (FileSplit) inputSplit;
 		Configuration job = context.getConfiguration();
 		this.maxLineLength = job.getInt("mapred.csvrecordreader.maxlinelength",
@@ -85,29 +94,32 @@ public class IndexedRecordReader extends
 					(int) Math.min(Integer.MAX_VALUE, end - start));
 		}
 		this.pos = start;
-		
+
 		conf = context.getConfiguration();
-		
-		
+
 		Class<?> c = conf.getClass("Index", null);
 		if (c == null)
 			throw new IllegalArgumentException(
 					"Index class must be set in config");
 
 		try {
-			
-			index = (Index<String, String>) (c.getConstructor()
-					.newInstance());
-			
+
+			index = (Index<String, String>) (c.getConstructor().newInstance());
+
 			// try to load the index
-			String savePath = generateIndexPath(conf.get("indexSavePath"), inputSplit, index);
+			String savePath = generateIndexPath(conf.get("indexSavePath"),
+					inputSplit, index);
 			index.load(savePath);
 
 		} catch (Exception e) {
 			throw new RuntimeException(e);
 		}
-		LOG.info("Index set!");
 		
+		shared = new Shared(index);
+		IndexWriterThread thread = new IndexWriterThread(shared);
+		// thread.run();
+		LOG.info("Index set!");
+
 		LOG.debug("delimiter: " + delimiter);
 	}
 
@@ -116,95 +128,104 @@ public class IndexedRecordReader extends
 	 * @param inputSplit
 	 * @return
 	 */
-	private String generateIndexPath(String folder, InputSplit inputSplit, Index index) {
+	private String generateIndexPath(String folder, InputSplit inputSplit,
+			Index index) {
 		FileSplit split;
-		try{
-			split = (FileSplit) inputSplit;	
+		try {
+			split = (FileSplit) inputSplit;
 		} catch (Exception e) {
-			throw new IllegalArgumentException("InputSplit must be an instance of FileSplit");
+			throw new IllegalArgumentException(
+					"InputSplit must be an instance of FileSplit");
 		}
-		
+
 		File folderFile = (new File(folder));
-		if(!(folderFile.isDirectory() || !folderFile.exists()))
-			throw new IllegalArgumentException("savePath must be a folder: " + folderFile.getAbsolutePath());
-		
-		if(!split.getPath().toString().startsWith("hdfs://")){
-			throw new IllegalArgumentException("The File for the Index must be in the hdfs");
+		if (!(folderFile.isDirectory() || !folderFile.exists()))
+			throw new IllegalArgumentException("savePath must be a folder: "
+					+ folderFile.getAbsolutePath());
+
+		if (!split.getPath().toString().startsWith("hdfs://")) {
+			throw new IllegalArgumentException(
+					"The File for the Index must be in the hdfs");
 		}
-		
-		String path = split.getPath().toString().replaceFirst("hdfs://[^\\/]+", "");
+
+		String path = split.getPath().toString()
+				.replaceFirst("hdfs://[^\\/]+", "");
 		LOG.debug("path: " + path);
 		String path2 = folderFile.getAbsolutePath() + path;
 		LOG.debug("path2: " + path2);
-		String path3 = path2 + "_" + index.getIdentifier() + "_" + split.getStart();
+		String path3 = path2 + "_" + index.getIdentifier() + "_"
+				+ split.getStart();
 		LOG.debug("FILE NAME: " + path3);
-		
+
 		(new File(path3).getParentFile()).mkdirs();
-		
+
 		// TODO Auto-generated method stub
 		return path3;
 	}
+
 	@Override
 	public boolean nextKeyValue() throws IOException {
 		LOG.info("in Recorder.nextKeyValue()");
-	    if (key == null) {
-	      key = new LongWritable();
-	    }
-	    key.set(pos);
-	    if (value == null) {
-	      value = new ArrayList<String>();
-	    }
-	    
-	    int newSize = 0;
-	    value.clear();
-	    boolean fromIndex = false;
-	    
-	    // Iterator<String> iterator = index.getIterator("2006-03-17", "2006-03-17");
-	    
-	    //iterator.hasNext()
-	    
-//	    if(iterator != null){
-//	    	if(iterator.hasNext()){
-//	    		pos = iterator.next().getValue();
-//	    		fromIndex = true;
-//	    		LOG.info("Using index for pos" + pos);
-//	    	} else {
-//	    		pos = iterator.getHighestOffset(); // this one is read double
-//	    		iterator = null;
-//	    	}
-//	    }
-//	    
-	    // we almost always break from this loop, it is only for making sure
-	    // that we are in maxLineLength
-	    while (pos < end) {
-	    	
-	      newSize = in.readLine(tmpInputLine, maxLineLength,
-	                            Math.max( (int)Math.min(Integer.MAX_VALUE, end-pos),
-	                                     maxLineLength) );
-	      
-	      LOG.info("READING LINE: " + tmpInputLine);
-	      
-	      
-	      this.splits = tmpInputLine.toString().split(delimiter);
-	      LOG.info("Splitsize: " + splits.length);
-			
-			
-	      pos += newSize;
-	      if (newSize == 0 || newSize < maxLineLength) {
-	        break;
-	      }
+		if (key == null) {
+			key = new LongWritable();
+		}
+		key.set(pos);
+		if (value == null) {
+			value = new ArrayList<String>();
+		}
 
-	      // line too long. try again
-	      LOG.info("Skipped line of size " + newSize + " at pos " + 
-	               (pos - newSize));
-	    }
-	    
-	    // return false if we didnt read anything, end of input
+		int newSize = 0;
+		value.clear();
+		boolean fromIndex = false;
+
+		//TODO: how to know where the index ended
+		
+		// Iterator<String> iterator = index.getIterator("2006-03-17",
+		// "2006-03-17");
+
+		// iterator.hasNext()
+
+		// if(iterator != null){
+		// if(iterator.hasNext()){
+		// pos = iterator.next().getValue();
+		// fromIndex = true;
+		// LOG.info("Using index for pos" + pos);
+		// } else {
+		// pos = iterator.getHighestOffset(); // this one is read double
+		// iterator = null;
+		// }
+		// }
+		//
+		// we almost always break from this loop, it is only for making sure
+		// that we are in maxLineLength
+		
+		while (pos < end) {
+
+			newSize = in.readLine(tmpInputLine, maxLineLength,
+					Math.max((int) Math.min(Integer.MAX_VALUE, end - pos),
+							maxLineLength));
+
+			LOG.info("READING LINE: " + tmpInputLine);
+
+			this.splits = tmpInputLine.toString().split(delimiter);
+			LOG.info("Splitsize: " + splits.length);
+
+			pos += newSize;
+			if (newSize == 0 || newSize < maxLineLength) {
+				break;
+			}
+
+			// line too long. try again
+			LOG.info("Skipped line of size " + newSize + " at pos "
+					+ (pos - newSize));
+		}
+
+		// return false if we didnt read anything, end of input
 		if (newSize == 0) {
 			String sp = conf.get("indexSavePath");
 			if (index != null && sp != null)
-				index.save(sp);
-			
+				index.save(null);
+
 			key = null;
 			value = null;
 			return false;
@@ -214,13 +235,12 @@ public class IndexedRecordReader extends
 		if (index != null) {
 			index.add(splits, tmpInputLine.toString());
 		}
-		
-		if(this.splits == null)
+
+		if (this.splits == null)
 			LOG.info("splits are null");
 
 		// if the predicate is matched, return, otherwise return nextKeyValue();
-		if (fromIndex || selectable == null ||
-				selectable.select(this.splits)) {
+		if (fromIndex || selectable == null || selectable.select(this.splits)) {
 			for (String s : this.splits) {
 				LOG.info("adding to arraylist: " + s);
 				value.add(s);
@@ -229,35 +249,97 @@ public class IndexedRecordReader extends
 		} else {
 			return nextKeyValue();
 		}
-	    
-	  }
 
-	  @Override
-	  public LongWritable getCurrentKey() {
-	    return key;
-	  }
+	}
 
-	  @Override
-	  public ArrayList<String> getCurrentValue() {
-	    return value;
-	  }
+	@Override
+	public LongWritable getCurrentKey() {
+		return key;
+	}
 
-	  /**
-	   * Get the progress within the split
-	   */
-	  @Override
+	@Override
+	public ArrayList<String> getCurrentValue() {
+		return value;
+	}
+
+	/**
+	 * Get the progress within the split
+	 */
+	@Override
 	public float getProgress() {
-	    if (start == end) {
-	      return 0.0f;
-	    } else {
-	      return Math.min(1.0f, (pos - start) / (float)(end - start));
-	    }
-	  }
-	  
-	  @Override
+		if (start == end) {
+			return 0.0f;
+		} else {
+			return Math.min(1.0f, (pos - start) / (float) (end - start));
+		}
+	}
+
+	@Override
 	public synchronized void close() throws IOException {
-	    if (in != null) {
-	      in.close(); 
-	    }
-	  }
+		if (in != null) {
+			in.close();
+		}
+	}
+	
+	class Shared {
+		private Index index;
+		private LinkedList<String[]> splitsList = new LinkedList<String[]>();
+		private LinkedList<String> valueList = new LinkedList<String>();
+		
+		public void add(String[] splits, String string) {
+			if(getSplitsList().size() > 1000)
+				return;
+			
+			getSplitsList().add(splits);
+			getValueList().add(string);
+		}
+		
+		public void save(){};
+
+		Shared(Index index){
+			this.setIndex(index);
+		}
+
+		/**
+		 * @param index the index to set
+		 */
+		public void setIndex(Index index) {
+			this.index = index;
+		}
+
+		/**
+		 * @return the index
+		 */
+		public Index getIndex() {
+			return index;
+		}
+
+		/**
+		 * @param splitsList the splitsList to set
+		 */
+		public void setSplitsList(LinkedList<String[]> splitsList) {
+			this.splitsList = splitsList;
+		}
+
+		/**
+		 * @return the splitsList
+		 */
+		public LinkedList<String[]> getSplitsList() {
+			return splitsList;
+		}
+
+		/**
+		 * @param valueList the valueList to set
+		 */
+		public void setValueList(LinkedList<String> valueList) {
+			this.valueList = valueList;
+		}
+
+		/**
+		 * @return the valueList
+		 */
+		public LinkedList<String> getValueList() {
+			return valueList;
+		}
+	}
 }
